Starting using try-with-resources statement and Method reflection.